Retrieve URLs dynamically

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1496,8 +1496,8 @@ low_memory.configure_failure={APPNAME} konnten keine h\u00f6heren Hauptspeicher-
 low_memory.configure_success=H\u00f6here Hauptspeicher-Einstellungen wurden installiert.\n{APPNAME} muss neu gestartet werden, damit die Einstellungen aktiv werden.
 #orig#low_memory.do_nothing=Do Nothing
 low_memory.do_nothing=Ignorieren
-#orig#low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
-low_memory.error.text={APPNAME} ben\u00f6tigt eine gr\u00f6\u00dfere Speicherkonfiguration.\n\nBitte verringern Sie die Anzahl der Dateien und/oder Folder. Oder vergr\u00f6\u00dfern Sie die Speicherkonfiguration.\n\nhttp\://wiki.powerfolder.com/wiki/Memory_configuration
+#orig#low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\n{0}
+low_memory.error.text={APPNAME} ben\u00f6tigt eine gr\u00f6\u00dfere Speicherkonfiguration.\n\nBitte verringern Sie die Anzahl der Dateien und/oder Folder. Oder vergr\u00f6\u00dfern Sie die Speicherkonfiguration.\n\n{0}
 #orig#low_memory.error.title=Out of memory
 low_memory.error.title=Kein Hauptspeicher
 #orig#low_memory.increase=Increase Memory
