--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -972,7 +972,7 @@ line_speed.upload_speed=Upload
 low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
 low_memory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
 low_memory.do_nothing=Do Nothing
-low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
+low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\n{0}
 low_memory.error.title=Out of memory
 low_memory.increase=Increase Memory
 low_memory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
