--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1509,8 +1509,8 @@ low_memory.configure_failure={APPNAME} fracas\u00f3 en el intento de configurar 
 low_memory.configure_success=Memoria adicional ha sido configurada.\n{APPNAME} debe terminar y volver a ser iniciado para que los cambios hagan efecto.
 #orig#low_memory.do_nothing=Do Nothing
 low_memory.do_nothing=Ignorar
-#orig#low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
-low_memory.error.text={APPNAME} necesita mas memoria in la configuraci\u00f3n.\n\nFavoer reduzca el n\u00famero de carpetas y archivos bajo control, o a\u00f1oadir mas memoria,\n\nhttp\:\\wiki.poewrfolder.com/wiki/Memory_configuration
+#orig#low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\n{0}
+low_memory.error.text={APPNAME} necesita mas memoria in la configuraci\u00f3n.\n\nFavoer reduzca el n\u00famero de carpetas y archivos bajo control, o a\u00f1oadir mas memoria,\n\n{0}
 #orig#low_memory.error.title=Out of memory
 low_memory.error.title=Memoria agotada.
 #orig#low_memory.increase=Increase Memory
