--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -1509,8 +1509,8 @@ low_memory.configure_failure=PowerFolder non \u00e8 riuscito a configurare la me
 low_memory.configure_success=Memoria aggiuntiva configurata.\nPowerFolder deve essere riavviato manualmente perch\u00e8 ci\u00f2 abbia effetto.
 #orig#low_memory.do_nothing=Do Nothing
 low_memory.do_nothing=Non fare nulla
-#orig#low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
-low_memory.error.text=PowerFolder richiede pi\u00f9 memoria nella tua configurazione.\n\nSi prega di ridurre il numero di file e cartelle gestiti, o configura una configurazione di memoria pi\u00f9 ampia.\n\nhttp\://wiki.powerfolder.com/wiki/Memory_configuration
+#orig#low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\n{0}
+low_memory.error.text=PowerFolder richiede pi\u00f9 memoria nella tua configurazione.\n\nSi prega di ridurre il numero di file e cartelle gestiti, o configura una configurazione di memoria pi\u00f9 ampia.\n\n{0}
 #orig#low_memory.error.title=Out of memory
 low_memory.error.title=Memoria esaurita
 #orig#low_memory.increase=Increase Memory
