--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1032,7 +1032,7 @@ low_memory.configure_failure=PowerFolder \u306f\u8ffd\u52a0\u7684\u30e1\u30e2\u3
 low_memory.configure_success=\u8ffd\u52a0\u7684\u30e1\u30e2\u30ea\u3092\u8a2d\u5b9a\u3057\u307e\u3057\u305f\u3002\n\u3053\u308c\u3092\u53cd\u6620\u3055\u305b\u308b\u306b\u306f PowerFolder \u306e\u518d\u30b9\u30bf\u30fc\u30c8\u304c\u5fc5\u8981\u3067\u3059\u3002
 #orig#low_memory.do_nothing=Do Nothing
 low_memory.do_nothing=\u4f55\u3082\u3057\u306a\u3044
-##low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
+##low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\n{0}
 ##low_memory.error.title=Out of memory
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=\u30e1\u30e2\u30ea\u3092\u5897\u3084\u3059
