--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -948,7 +948,7 @@ line_speed.upload_speed=Upload limiet
 ##low_memory.configure_failure={APPNAME} was unable to configure additional memory.\nPlease contact {APPNAME} Support for advice.
 ##low_memory.configure_success=Additional memory has been configured.\n{APPNAME} must be restarted manually for this to take effect.
 ##low_memory.do_nothing=Do Nothing
-##low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
+##low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\n{0}
 ##low_memory.error.title=Out of memory
 ##low_memory.increase=Increase Memory
 ##low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information\:\n{0}
