--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1526,8 +1526,8 @@ low_memory.configure_failure=PowerFolder\u4e0d\u80fd\u914d\u7f6e\u989d\u5916\u76
 low_memory.configure_success=\u989d\u5916\u7684\u5185\u5b58\u5df2\u7ecf\u88ab\u914d\u7f6e\u3002\nPowerFolder\u5fc5\u987b\u624b\u52a8\u91cd\u542f\u624d\u80fd\u751f\u6548\u3002
 #orig#low_memory.do_nothing=Do Nothing
 low_memory.do_nothing=\u5ffd\u7565
-#orig#low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
-low_memory.error.text=\u6839\u636e\u4f60\u7684\u914d\u7f6e\uff0cPowerFolder\u9700\u8981\u66f4\u591a\u7684\u5185\u5b58\u3002\u3002\n\n\u8bf7\u51cf\u5c11\u7ba1\u7406\u7684\u6587\u4ef6\u548c\u6587\u4ef6\u5939\u6570\u91cf\uff0c\u6216\u914d\u7f6e\u66f4\u5927\u5bb9\u91cf\u7684\u5185\u5b58\u3002\n\nhttp\://wiki.powerfolder.com/wiki/Memory_configuration
+#orig#low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\n{0}
+low_memory.error.text=\u6839\u636e\u4f60\u7684\u914d\u7f6e\uff0cPowerFolder\u9700\u8981\u66f4\u591a\u7684\u5185\u5b58\u3002\u3002\n\n\u8bf7\u51cf\u5c11\u7ba1\u7406\u7684\u6587\u4ef6\u548c\u6587\u4ef6\u5939\u6570\u91cf\uff0c\u6216\u914d\u7f6e\u66f4\u5927\u5bb9\u91cf\u7684\u5185\u5b58\u3002\n\n{0}
 #orig#low_memory.error.title=Out of memory
 low_memory.error.title=\u5185\u5b58\u6ea2\u51fa
 #orig#low_memory.increase=Increase Memory
