--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -1031,7 +1031,7 @@ low_memory.configure_failure=PowerFolder \u043d\u0435 \u0443\u0434\u0430\u043b\u
 low_memory.configure_success=\u0414\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c\u043d\u0430\u044f \u043f\u0430\u043c\u044f\u0442\u044c \u0431\u044b\u043b\u0430 \u0441\u043a\u043e\u043d\u0444\u0438\u0433\u0443\u0440\u0438\u0440\u043e\u0432\u0430\u043d\u0430.\n\u0414\u043b\u044f \u0442\u043e\u0433\u043e, \u0447\u0442\u043e\u0431\u044b \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f \u0432\u0441\u0442\u0443\u043f\u0438\u043b\u0438 \u0432 \u0441\u0438\u043b\u0443, \u043d\u0435\u043e\u0431\u0445\u043e\u0434\u0438\u043c\u043e \u043f\u0435\u0440\u0435\u0437\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044c PowerFolder \u0432\u0440\u0443\u0447\u043d\u0443\u044e.
 #orig#low_memory.do_nothing=Do Nothing
 low_memory.do_nothing=\u041d\u0438\u0447\u0435\u0433\u043e \u043d\u0435 \u043f\u0440\u0435\u0434\u043f\u0440\u0438\u043d\u0438\u043c\u0430\u0442\u044c
-##low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
+##low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\n{0}
 ##low_memory.error.title=Out of memory
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=\u0423\u0432\u0435\u043b\u0438\u0447\u0438\u0442\u044c \u043f\u0430\u043c\u044f\u0442\u044c
