Retrieve URLs dynamically

--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -973,7 +973,7 @@ low_memory.configure_failure=PowerFolder nie by\u0142 w stanie skonfigurowa\u010
 low_memory.configure_success=Dodatkowa pami\u0119\u0107 zosta\u0142a poprawnie skonfigurowana.\nPowerFolder musi zosta\u0107 r\u0119cznie uruchomiony ponownie, aby zmiany odnios\u0142y skutek.
 #orig#low_memory.do_nothing=Do Nothing
 low_memory.do_nothing=Nic nie r\u00f3b
-##low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
+##low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\n{0}
 ##low_memory.error.title=Out of memory
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=Zwi\u0119ksz Pami\u0119\u0107
