--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -989,7 +989,7 @@ low_memory.configure_failure=PowerFolder n\u00e3o conseguiu configurar mais mem\
 low_memory.configure_success=Configura\u00e7\u00e3o de mem\u00f3ria adicional bem sucedida.\nPara que a mem\u00f3ria adicional seja reconhecida PowerFolder deve ser reiniciado manualmente.
 #orig#low_memory.do_nothing=Do Nothing
 low_memory.do_nothing=Nenhuma a\u00e7\u00e3o
-##low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
+##low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\n{0}
 ##low_memory.error.title=Out of memory
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=Aumentar Mem\u00f3ria
