Big CDN branding / Removed URLs from translation files

--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1253,7 +1253,7 @@ status_bar.status_change.title=Connection Status
 status_bar.sleep.tips=Disable folder change scanning
 status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.poor_quality_warning.title=Poor connection quality
-status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
+status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers\n\n{0}
 
 status.download=Down\: {0} KB/s
 status.active_download_count=Active\: {0}
