--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -2272,7 +2272,7 @@ status.upload=%.2f KB/s
 
 #orig#status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.no_sleep.tips=Habilitar busqueda de cambios en carpetas
-#orig#status_bar.poor_quality_warning.text=Most connections are being routed via servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
+#orig#status_bar.poor_quality_warning.text=Most connections are being routed via servers\n\n{0}
 status_bar.poor_quality_warning.text=La mayor\u00eda de las conecciones est\u00e1n conducidas por servidores {APPNAME}
 #orig#status_bar.poor_quality_warning.title=Poor connection quality
 status_bar.poor_quality_warning.title=Calidad de conneci\u00f3n deficiente
