--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -2272,8 +2272,7 @@ status.upload=%.2f KB/s
 
 #orig#status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.no_sleep.tips=Abilita scansione cartelle
-#orig#status_bar.poor_quality_warning.text=Most connections are being routed via servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
-status_bar.poor_quality_warning.text=Molte connessioni vengono indirizzate sui server PowerFolder
+#orig#status_bar.poor_quality_warning.text=Most connections are being routed via servers\n\n{0}
 #orig#status_bar.poor_quality_warning.title=Poor connection quality
 status_bar.poor_quality_warning.title=Scarsa qualit\u00e0 di connessione
 #orig#status_bar.sleep.tips=Disable folder change scanning
