--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1632,7 +1632,7 @@ status.download=%.2f KB/s
 status.upload=%.2f KB/s
 
 ##status_bar.no_sleep.tips=Enable folder change scanning
-##status_bar.poor_quality_warning.text=Most connections are being routed via servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
+##status_bar.poor_quality_warning.text=Most connections are being routed via servers\n\n{0}
 ##status_bar.poor_quality_warning.title=Poor connection quality
 ##status_bar.sleep.tips=Disable folder change scanning
 #orig#status_bar.status_change.connected={APPNAME} is connected
