--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -2295,8 +2295,7 @@ status.upload=\u4e0a\u4f20\: {0} KB/\u79d2
 
 #orig#status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.no_sleep.tips=\u542f\u7528\u6587\u4ef6\u5939\u66f4\u6539\u626b\u63cf
-#orig#status_bar.poor_quality_warning.text=Most connections are being routed via servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
-status_bar.poor_quality_warning.text=\u5927\u90e8\u5206\u8fde\u63a5\u901a\u8fc7PowerFolder\u670d\u52a1\u5668\u4f5c\u4e3a\u8def\u7531
+#orig#status_bar.poor_quality_warning.text=Most connections are being routed via servers\n\n{0}
 #orig#status_bar.poor_quality_warning.title=Poor connection quality
 status_bar.poor_quality_warning.title=\u8fde\u63a5\u8d28\u91cf\u5dee
 #orig#status_bar.sleep.tips=Disable folder change scanning
