--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1455,7 +1455,7 @@ invitation_files.description={APPNAME} Einladungen
 #orig#limited_connection.dont_autodetect=No longer detect limited connectivity
 limited_connection.dont_autodetect=Konnektivit\u00e4t nicht l\u00e4nger pr\u00fcfen
 #orig#limited_connection.text={APPNAME} has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation\:\n{0}
-limited_connection.text={APPNAME} hat eingeschr\u00e4nkte Konnektivit\u00e4t zum Netzwerk entdeckt.\nDer Grund k\u00f6nnte an Ihrer Firewall, Ihrem Router oder an einer Windows-Verbindungsteilung liegen.\nWie Sie die Konnektivit\u00e4t verbessern k\u00f6nnen, erfahren Sie unter\: \nhttp\://www.powerfolder.com/wiki/Limited_connectivity
+limited_connection.text={APPNAME} hat eingeschr\u00e4nkte Konnektivit\u00e4t zum Netzwerk entdeckt.\nDer Grund k\u00f6nnte an Ihrer Firewall, Ihrem Router oder an einer Windows-Verbindungsteilung liegen.\nWie Sie die Konnektivit\u00e4t verbessern k\u00f6nnen, erfahren Sie unter\: \n{0}
 #orig#limited_connection.title=Limited connectivity
 limited_connection.title=Eingeschr\u00e4nkte Konnektivit\u00e4t
 
@@ -2239,7 +2239,7 @@ status.upload=%.2f KB/s
 
 #orig#status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.no_sleep.tips=Suche nach \u00c4nderungen aktivieren
-#orig#status_bar.poor_quality_warning.text=Most connections are being routed via servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
+#orig#status_bar.poor_quality_warning.text=Most connections are being routed via servers\n\n{0}
 status_bar.poor_quality_warning.text=Die meisten Verbindungen werden nur getunnelt.
 #orig#status_bar.poor_quality_warning.title=Poor connection quality
 status_bar.poor_quality_warning.title=Schlechte Verbindungsqualit\u00e4t
