Allow online archive mode set from client, fixes #1716

--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -833,7 +833,7 @@ friends_panel.n_a=n/a
 friends_panel.unable_to_connect=Currently online (Unable to connect)
 
 general.application.name=PowerFolder
-general.archive_mode=File archive (local)
+general.local_archive_mode=File archive (local)
 general.accept=Accept
 general.reject=Reject
 general.apply=Apply
