--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1264,7 +1264,7 @@ general.accept=Aceptar.
 general.application.name={APPNAME}
 ##general.apply=Apply
 #orig#general.archive_mode=File archive (local)
-general.archive_mode=Archivo a guardar (local)
+general.local_archive_mode=Archivo a guardar (local)
 #orig#general.cancel=Cancel
 general.cancel=Cancelar
 #orig#general.cancel.key=C
