--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -1264,7 +1264,7 @@ general.accept=Accetta
 general.application.name=PowerFolder
 ##general.apply=Apply
 #orig#general.archive_mode=File archive (local)
-general.archive_mode=Archivio file (locale)
+general.local_archive_mode=Archivio file (locale)
 #orig#general.cancel=Cancel
 general.cancel=Cancella
 #orig#general.cancel.key=C
