--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1272,7 +1272,7 @@ general.application.name=PowerFolder
 #orig#general.apply=Apply
 general.apply=\u5e94\u7528
 #orig#general.archive_mode=File archive (local)
-general.archive_mode=\u6587\u4ef6\u5f52\u6863(\u672c\u5730)
+general.local_archive_mode=\u6587\u4ef6\u5f52\u6863(\u672c\u5730)
 #orig#general.cancel=Cancel
 general.cancel=\u53d6\u6d88
 #orig#general.cancel.key=C
