Consistent directory chooser, using standard chooser, refs #1898

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2148,7 +2148,7 @@ settings_tab.confirm_local_folder_move.title=Verschieben best\u00e4tigen
 #orig#settings_tab.download_script=Script after download
 settings_tab.download_script=Script nach Download
 #orig#settings_tab.download_script.select=Select
-settings_tab.download_script.select=Ausw\u00e4hlen
+general.select=Ausw\u00e4hlen
 #orig#settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
 settings_tab.edit_a_pattern.text=Datei-Muster bearbeiten
 #orig#settings_tab.edit_a_pattern.title=Edit a pattern
