--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1229,7 +1229,7 @@ settings_tab.preview_warning_title=Convert
 settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
 settings_tab.preview_warning_convert=Convert
 settings_tab.download_script=Script after download
-settings_tab.download_script.select=Select
+general.select=Select
 
 skin.black_moon=Black Moon
 skin.black_star=Black Star
