--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -2181,7 +2181,7 @@ settings_tab.confirm_local_folder_move.title=Confirmar movimiento
 #orig#settings_tab.download_script=Script after download
 settings_tab.download_script=Script despues de descarga
 #orig#settings_tab.download_script.select=Select
-settings_tab.download_script.select=Seleccionar
+general.select=Seleccionar
 #orig#settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
 settings_tab.edit_a_pattern.text=Editar un patr\u00f3n para excluir archivos en la sincronizaci\u00f3n
 #orig#settings_tab.edit_a_pattern.title=Edit a pattern
