--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1585,7 +1585,7 @@ send_invitation.placetostore=Indiquer un endroit pour enregistrer l'invitation
 #orig#settings_tab.download_script=Script after download
 settings_tab.download_script=Script apr\u00e8s le t\u00e9l\u00e9chargement
 #orig#settings_tab.download_script.select=Select
-settings_tab.download_script.select=S\u00e9lectionner
+general.select=S\u00e9lectionner
 ##settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
 ##settings_tab.edit_a_pattern.title=Edit a pattern
 ##settings_tab.folder_not_empty=Folder {0} is not empty.
