--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -2181,7 +2181,7 @@ settings_tab.confirm_local_folder_move.title=Conferma spostamento
 #orig#settings_tab.download_script=Script after download
 settings_tab.download_script=Script dopo download
 #orig#settings_tab.download_script.select=Select
-settings_tab.download_script.select=Seleziona
+general.select=Seleziona
 #orig#settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
 settings_tab.edit_a_pattern.text=Modifica un percorso per escludere files dalla sincronizzazione
 #orig#settings_tab.edit_a_pattern.title=Edit a pattern
