--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -2204,7 +2204,7 @@ settings_tab.confirm_local_folder_move.title=\u786e\u8ba4\u79fb\u52a8
 #orig#settings_tab.download_script=Script after download
 settings_tab.download_script=\u4e0b\u8f7d\u540e\u811a\u672c
 #orig#settings_tab.download_script.select=Select
-settings_tab.download_script.select=\u9009\u62e9
+general.select=\u9009\u62e9
 #orig#settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
 settings_tab.edit_a_pattern.text=\u7f16\u8f91\u7528\u4e8e\u540c\u6b65\u65f6\u5ffd\u7565\u6587\u4ef6\u7684\u6837\u5f0f
 #orig#settings_tab.edit_a_pattern.title=Edit a pattern
