updated by Dingar

--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -23,13 +23,13 @@
 # http://www.powerfolder.com
 #
 
-##about_dialog.app_description={APPDESCRIPTION}
+about_dialog.app_description={APPDESCRIPTION}
 #orig#about_dialog.check_for_updates.key=U
 about_dialog.check_for_updates.key=C
 #orig#about_dialog.check_for_updates.text=Updates
-about_dialog.check_for_updates.text=\u68c0\u67e5
+about_dialog.check_for_updates.text=\u66f4\u65b0
 #orig#about_dialog.check_for_updates.tips=Check for {APPNAME} updates
-about_dialog.check_for_updates.tips=\u68c0\u67e5PowerFolder\u66f4\u65b0
+about_dialog.check_for_updates.tips=\u68c0\u67e5{APPNAME}\u66f4\u65b0
 #orig#about_dialog.contributers=Contributers
 about_dialog.contributers=\u8d21\u732e\u8005
 #orig#about_dialog.documentation=Documentation
@@ -540,7 +540,7 @@ apps.dir.outlook=Outlook
 apps.dir.sunbird=Sunbird
 #orig#apps.dir.thunderbird=Thunderbird
 apps.dir.thunderbird=Thunderbird
-##apps.dir.windows_mail=Windows Mail
+apps.dir.windows_mail=Windows Mail
 
 #orig#archive.full_backup=Full backup
 archive.full_backup=\u5b8c\u5168\u5907\u4efd
@@ -866,7 +866,7 @@ estimation.unknown=\u672a\u77e5
 exp_computer_view.account=\u7528\u6237\: {0}
 #orig#exp_computer_view.collapse=Collapse computer details
 exp_computer_view.collapse=\u9690\u85cf\u8ba1\u7b97\u673a\u8be6\u60c5
-##exp_computer_view.connected_text=Connected
+exp_computer_view.connected_text=\u5df2\u7ecf\u8fde\u63a5
 #orig#exp_computer_view.expand=Expand computer details
 exp_computer_view.expand=\u5c55\u5f00\u8ba1\u7b97\u673a\u8be6\u60c5
 #orig#exp_computer_view.last_seen_text=Last seen online\: {0}
@@ -986,8 +986,8 @@ file_version_tab.size=\u5927\u5c0f\: {0}
 
 #orig#file_versions_table_model.date=Date
 file_versions_table_model.date=\u65e5\u671f
-##file_versions_table_model.local=Local version
-##file_versions_table_model.online=Online version
+file_versions_table_model.local=\u672c\u5730\u7248\u672c
+file_versions_table_model.online=\u7f51\u7edc\u7248\u672c
 #orig#file_versions_table_model.size=Size
 file_versions_table_model.size=\u5927\u5c0f
 #orig#file_versions_table_model.version=Version
@@ -1305,8 +1305,8 @@ general.folder=\u6587\u4ef6\u5939
 general.folder_name=\u540d\u79f0
 #orig#general.friday=Friday
 general.friday=\u661f\u671f\u4e94
-##general.help=Help
-##general.help.key=H
+general.help=\u5e2e\u52a9
+general.help.key=H
 #orig#general.hours=Hour(s)
 general.hours=\u5c0f\u65f6
 #orig#general.inviter=Inviter
@@ -1371,7 +1371,7 @@ general.thursday=\u661f\u671f\u56db
 general.time=%02d\:%02d\:%02d
 #orig#general.today=Today
 general.today=\u4eca\u5929
-##general.tomorrow=Tomorrow
+general.tomorrow=\u660e\u5929
 #orig#general.transfer_mode=Transfer mode
 general.transfer_mode=\u4f20\u8f93\u6a21\u5f0f
 #orig#general.tuesday=Tuesday
@@ -1449,13 +1449,13 @@ home_tab.online_storage.not_setup.tips=\u70b9\u51fb\u8fd9\u91cc\u914d\u7f6e\u8d2
 home_tab.online_storage.title=\u8d26\u6237
 #orig#home_tab.online_storage.usage=Online usage\: {0} ({1}%)
 home_tab.online_storage.usage=\u5728\u7ebf\u4f7f\u7528\u7387\: {0} ({1}%)
-##home_tab.status=Status
+home_tab.status=\u72b6\u6001
 #orig#home_tab.sync_eta=Estimated synchronized\: {0}
 home_tab.sync_eta=\u6240\u6709\u5c06\u8981\u540c\u6b65\u7684\u6587\u4ef6\u5939 {0}
-##home_tab.sync_unknown=Estimated synchronized\: Unknown
-##home_tab.synchronizing.0=Synchronization in progress.
-##home_tab.synchronizing.1=Synchronization in progress..
-##home_tab.synchronizing.2=Synchronization in progress...
+home_tab.sync_unknown=\u4f30\u8ba1\u5df2\u7ecf\u540c\u6b65\: \u672a\u77e5
+home_tab.synchronizing.0=\u6b63\u5728\u8fdb\u884c\u540c\u6b65.
+home_tab.synchronizing.1=\u6b63\u5728\u8fdb\u884c\u540c\u6b65..
+home_tab.synchronizing.2=\u6b63\u5728\u8fdb\u884c\u540c\u6b65...
 #orig#home_tab.tell_friend.text=Tell someone about {APPNAME}
 home_tab.tell_friend.text=\u5411\u670b\u53cb\u4ecb\u7ecdPowerFolder
 #orig#home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
@@ -1537,7 +1537,7 @@ low_memory.text=PowerFolder\u5185\u5b58\u4e0d\u8db3\u3002\n\nPowerFolder\u4f1a\u
 #orig#low_memory.title=Low memory
 low_memory.title=\u5185\u5b58\u4e0d\u8db3
 
-##main_frame.inline_info_close.tip=Close information panel
+main_frame.inline_info_close.tip=\u5173\u95ed\u4fe1\u606f\u9762\u677f
 
 #orig#main_tabbed_pane.computers.description=Details about other computers
 main_tabbed_pane.computers.description=\u5176\u5b83PowerFolder\u8ba1\u7b97\u673a\u7684\u76f8\u5173\u8be6\u60c5
@@ -1777,19 +1777,19 @@ preferences.dialog.exit_behavior=\u5173\u95ed\u7a97\u53e3
 preferences.dialog.exit_behavior.exit=\u9000\u51fa\u7a0b\u5e8f
 #orig#preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior.minimize=\u6700\u5c0f\u5316\u5230\u7cfb\u7edf\u6258\u76d8
-##preferences.dialog.filesystem.watch=Instant file change detection
-##preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
+preferences.dialog.filesystem.watch=\u5373\u65f6\u6587\u4ef6\u53d8\u66f4\u76d1\u6d4b
+preferences.dialog.filesystem.watch.tooltip=\u901a\u8fc7\u5bf9\u6587\u4ef6\u7cfb\u7edf\u76d1\u6d4b\u6765\u5373\u65f6\u76d1\u6d4b\u6587\u4ef6\u7684\u589e\u52a0\u3001\u4fee\u6539\u6216\u5220\u9664\u3002\u4ec5\u5bf9\u6240\u6709\u6587\u4ef6\u5939\u8fdb\u884c\u5b9a\u671f\u626b\u63cf\u3002\u5ffd\u7565\u626b\u63cf\u65f6\u95f4\u3002
 #orig#preferences.dialog.folder_sync_text=Warning day(s)
 preferences.dialog.folder_sync_text=\u8b66\u544a\u5929\u6570
 #orig#preferences.dialog.folder_sync_warn.use=Warn if folders not synchronized
 preferences.dialog.folder_sync_warn.use=\u5982\u679c\u6587\u4ef6\u5939\u6ca1\u6709\u540c\u6b65\uff0c\u8fdb\u884c\u8b66\u544a
 #orig#preferences.dialog.general.title=General
 preferences.dialog.general.title=\u4e00\u822c
-##preferences.dialog.information_panel=Information panel
-##preferences.dialog.information_panel_left=Panel to left of the main panel
-##preferences.dialog.information_panel_right=Panel to right of the main panel
-##preferences.dialog.information_panel_separate=Separate window
-##preferences.dialog.inline_info=Display detail information in same window
+preferences.dialog.information_panel=\u4fe1\u606f\u9762\u677f
+preferences.dialog.information_panel_left=\u9762\u677f\u7f6e\u4e8e\u4e3b\u9762\u677f\u5de6\u4fa7
+preferences.dialog.information_panel_right=\u9762\u677f\u7f6e\u4e8e\u4e3b\u9762\u677f\u53f3\u4fa7
+preferences.dialog.information_panel_separate=\u5206\u79bb\u7a97\u53e3
+preferences.dialog.inline_info=\u5728\u540c\u4e00\u7a97\u53e3\u663e\u793a\u8be6\u7ec6\u4fe1\u606f
 #orig#preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.ip_lan_list=\u5c40\u57df\u7f51IP\u5217\u8868
 #orig#preferences.dialog.lan_line_settings=LAN speed
@@ -1900,7 +1900,7 @@ preferences.dialog.translucent_frame=\u4e3b\u7a97\u53e3\u534a\u900f\u660e\u6548\
 preferences.dialog.translucent_text=\u534a\u900f\u660e
 #orig#preferences.dialog.ui.title=User Interface
 preferences.dialog.ui.title=\u7528\u6237\u754c\u9762
-##preferences.dialog.ui_locked=Lock on startup
+preferences.dialog.ui_locked=\u542f\u52a8\u65f6\u9501\u5b9a
 #orig#preferences.dialog.underline_link=Always underline links
 preferences.dialog.underline_link=\u94fe\u63a5\u59cb\u7ec8\u4f7f\u7528\u4e0b\u5212\u7ebf
 #orig#preferences.dialog.use.relayed.connections=Use relayed connections
@@ -2151,10 +2151,10 @@ remove_pattern.remove=\u5220\u9664
 #orig#remove_pattern.title=Remove ignore pattern
 remove_pattern.title=\u5220\u9664\u5ffd\u7565\u6837\u5f0f
 
-##restore_files_table_model.file_name=File name
-##restore_files_table_model.modified_date=Modified Date
-##restore_files_table_model.size=Size
-##restore_files_table_model.version=Version
+restore_files_table_model.file_name=\u6587\u4ef6\u540d
+restore_files_table_model.modified_date=\u4fee\u6539\u65e5\u671f
+restore_files_table_model.size=\u5927\u5c0f
+restore_files_table_model.version=\u7248\u672c
 
 #orig#select_invitation.folder_text=Select folder to send invitation for
 select_invitation.folder_text=\u9009\u62e9\u8981\u53d1\u9001\u9080\u8bf7\u7684\u6587\u4ef6\u5939
@@ -2231,9 +2231,9 @@ settings_tab.move_error.other=\u79fb\u52a8\u6587\u4ef6\u5939\u65f6\u53d1\u751f\u
 settings_tab.move_error.temp=\u4e0d\u80fd\u521b\u5efa\u4e34\u65f6\u6587\u4ef6\u5939
 #orig#settings_tab.move_error.title=Error moving folder contents
 settings_tab.move_error.title=\u79fb\u52a8\u6587\u4ef6\u5939\u5185\u5bb9\u51fa\u9519
-##settings_tab.offer_maintenance.cleanup_button=Cleanup
-##settings_tab.offer_maintenance.text=Cleanup file archive?
-##settings_tab.offer_maintenance.title=Cleanup archive
+settings_tab.offer_maintenance.cleanup_button=\u6e05\u7406
+settings_tab.offer_maintenance.text=\u6e05\u7406\u6587\u4ef6\u5b58\u6863\uff1f
+settings_tab.offer_maintenance.title=\u6e05\u7406\u5b58\u6863
 #orig#settings_tab.preview_warning_convert=Convert
 settings_tab.preview_warning_convert=\u8f6e\u6362
 #orig#settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
@@ -2393,11 +2393,11 @@ transfer.problem.transfer.exception=\u5b58\u5728\u4e00\u4e2a\u4f20\u8f93\u5f02\u
 
 #orig#transfer_mode.automatic_download.name=Automatic download
 transfer_mode.automatic_download.name=\u81ea\u52a8\u4e0b\u8f7d
-##transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
-##transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
-##transfer_mode.backup_source.name=Backup source (5 minutes)
-##transfer_mode.backup_source_hour.name=Backup source (1 hour)
-##transfer_mode.backup_target.name=Backup target
+transfer_mode.automatic_synchronization.name=\u81ea\u52a8\u540c\u6b65\uff081 \u5206\u949f\uff09
+transfer_mode.automatic_synchronization_10min.name=\u81ea\u52a8\u540c\u6b65\uff081 0\u5206\u949f\uff09
+transfer_mode.backup_source.name=\u5907\u4efd\u6e90\uff085\u5206\u949f\uff09
+transfer_mode.backup_source_hour.name=\u5907\u4efd\u6e90\uff081\u5c0f\u65f6\uff09
+transfer_mode.backup_target.name=\u5907\u4efd\u76ee\u6807
 #orig#transfer_mode.custom.name=Custom profile
 transfer_mode.custom.name=\u81ea\u5b9a\u4e49\u914d\u7f6e
 #orig#transfer_mode.disabled.name=Disabled
@@ -2448,19 +2448,19 @@ uicontroller.local_mass_delete.message=\u6587\u4ef6\u5939 {0} \u4e2d\u7684\u6240
 uicontroller.local_mass_delete.remove_folder_locally=\u5220\u9664\u672c\u5730\u6587\u4ef6\u5939
 #orig#uicontroller.local_mass_delete.title=All files deleted
 uicontroller.local_mass_delete.title=\u5220\u9664\u6240\u6709\u6587\u4ef6
-##uicontroller.remote_mass_delete.warning_absolute_message=Member {0} deleted {1} or more files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
+uicontroller.remote_mass_delete.warning_absolute_message=\u6210\u5458 {0} \u5220\u9664\u4e86\u6587\u4ef6\u5939 {2} \u4e2d{1}\u4e2a\u4ee5\u4e0a \u7684\u6587\u4ef6\u3002\n\n\u4e3a\u4e86\u4fdd\u62a4\u672c\u5730\u6587\u4ef6\uff0c\u6587\u4ef6\u5939\u7684\u4f20\u8f93\u6a21\u5f0f\n\u4ece {3} \u53d8\u66f4\u4e3a {4}\u3002\u3002
 #orig#uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 uicontroller.remote_mass_delete.warning_message=\u6210\u5458 {0} \u5220\u9664\u4e86\u6587\u4ef6\u5939 {2} \u4e2d {1}% \u7684\u6587\u4ef6\u3002\n\n\u4e3a\u4e86\u4fdd\u62a4\u672c\u5730\u6587\u4ef6\uff0c\u6587\u4ef6\u5939\u7684\u4f20\u8f93\u6a21\u5f0f\n\u4ece {3} \u53d8\u66f4\u4e3a {4}\u3002
 #orig#uicontroller.remote_mass_delete.warning_title=Mass deletion detected
 uicontroller.remote_mass_delete.warning_title=\u68c0\u6d4b\u5230\u5927\u91cf\u5220\u9664
 
-##uilock.dialog.error.wronglogin=Invalid username or password.
-##uilock.dialog.exit=Exit
-##uilock.dialog.help=Help
-##uilock.dialog.info=Enter username/email and password to unlock.
-##uilock.dialog.password=Password\:
-##uilock.dialog.title=User interface locked
-##uilock.dialog.username=Username\:
+uilock.dialog.error.wronglogin=\u65e0\u6548\u7528\u6237\u540d\u6216\u5bc6\u7801
+uilock.dialog.exit=\u9000\u51fa
+uilock.dialog.help=\u5e2e\u52a9
+uilock.dialog.info=\u8f93\u5165\u7528\u6237\u540d/\u7535\u5b50\u90ae\u7bb1\u548c\u5bc6\u7801\u6765\u89e3\u9501
+uilock.dialog.password=\u5bc6\u7801\:
+uilock.dialog.title=\u7528\u6237\u754c\u9762\u9501\u5b9a
+uilock.dialog.username=\u7528\u6237\u540d\:
 
 #orig#uploads_information_card.auto_cleanup.days={0} day(s)
 uploads_information_card.auto_cleanup.days={0} \u5929
@@ -2563,7 +2563,7 @@ wizard.choose_disk_location.send_invitation=\u53d1\u9001\u9080\u8bf7
 wizard.choose_disk_location.target_dir=\u76ee\u6807\u6587\u4ef6\u5939
 #orig#wizard.choose_disk_location.title=Select Directory
 wizard.choose_disk_location.title=\u9009\u62e9\u78c1\u76d8
-##wizard.choose_disk_location.total_directory_size=Total size\: {0} Files\: {1}
+wizard.choose_disk_location.total_directory_size=\u5408\u8ba1\u5927\u5c0f\: {0} \u6587\u4ef6\u6570\: {1}
 #orig#wizard.choose_multi_disk_location.select_additional=Additional directories
 wizard.choose_multi_disk_location.select_additional=\u9644\u52a0\u76ee\u5f55
 #orig#wizard.choose_multi_disk_location.title=Select Directories
@@ -2642,21 +2642,21 @@ wizard.login_online_storage.no_os=\u4ec5\u76f4\u63a5\u540c\u6b65\u3002\u4e0d\u89
 wizard.login_online_storage.remember_password=\u8bb0\u4f4f\u5bc6\u7801
 #orig#wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.login_online_storage.setup_default=\u8bbe\u7f6e\u9ed8\u8ba4\u7684\u540c\u6b65\u6587\u4ef6\u5939
-##wizard.multi_file_restore_panel.button_date=Date specific version(s)
-##wizard.multi_file_restore_panel.button_date.tip=Restore version(s) from a specific date.
-##wizard.multi_file_restore_panel.button_latest=Latest version(s)
-##wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the file(s).
-##wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
-##wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
-##wizard.multi_file_restore_panel.retrieving_none=No file version information available.
-##wizard.multi_file_restore_panel.retrieving_success=File version information has been retrieved.
-##wizard.multi_file_restore_panel.title=File restore
-##wizard.multi_file_restoring_panel.fail_text=No files have been restored. Problems have been logged.
-##wizard.multi_file_restoring_panel.fail_title=File restore failed
-##wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored. Problems have been logged.
-##wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
-##wizard.multi_file_restoring_panel.success_title=Files restored
-##wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
+wizard.multi_file_restore_panel.button_date=\u7279\u5b9a\u65e5\u671f\u7248\u672c
+wizard.multi_file_restore_panel.button_date.tip=\u6062\u590d\u6587\u4ef6\u7248\u672c\u5230\u7279\u5b9a\u65e5\u671f\u3002
+wizard.multi_file_restore_panel.button_latest=\u6700\u65b0\u7248\u672c
+wizard.multi_file_restore_panel.button_latest.tip=\u6062\u590d\u6587\u4ef6\u7684\u6700\u65b0\u7248\u672c\u3002
+wizard.multi_file_restore_panel.retrieving=\u6b63\u5728\u67e5\u8be2\u6587\u4ef6\u7248\u672c\u4fe1\u606f {0}/{1}...
+wizard.multi_file_restore_panel.retrieving_failure=\u5bf9\u4e0d\u8d77\uff0c\u4e0d\u80fd\u67e5\u5230\u6587\u4ef6\u7684\u7248\u672c\u4fe1\u606f\u3002
+wizard.multi_file_restore_panel.retrieving_none=\u6ca1\u6709\u6709\u6548\u7684\u6587\u4ef6\u7248\u672c\u4fe1\u606f\u3002
+wizard.multi_file_restore_panel.retrieving_success=\u5df2\u7ecf\u67e5\u5230\u6587\u4ef6\u7248\u672c\u4fe1\u606f
+wizard.multi_file_restore_panel.title=\u6587\u4ef6\u6062\u590d
+wizard.multi_file_restoring_panel.fail_text=\u6ca1\u6709\u6587\u4ef6\u88ab\u6062\u590d\u3002\u95ee\u9898\u5df2\u7ecf\u8bb0\u5f55\u5230\u65e5\u5fd7\u6587\u4ef6\u3002
+wizard.multi_file_restoring_panel.fail_title=\u6587\u4ef6\u6062\u590d\u5931\u8d25
+wizard.multi_file_restoring_panel.partial_text={1}\u4e2a\u6587\u4ef6\u4e2d\u7684{0}\u4e2a\u5df2\u7ecf\u88ab\u6062\u590d\u3002\u95ee\u9898\u5df2\u7ecf\u8bb0\u5f55\u5230\u65e5\u5fd7\u6587\u4ef6\u3002
+wizard.multi_file_restoring_panel.success_text=\u8bf7\u6c42\u7684\u6587\u4ef6\u5df2\u7ecf\u88ab\u6062\u590d\u3002
+wizard.multi_file_restoring_panel.success_title=\u6062\u590d\u7684\u6587\u4ef6
+wizard.multi_file_restoring_panel.working=\u6b63\u5728\u6062\u590d\u6587\u4ef6 {0}/{1}\uff0c\u8bf7\u7b49\u5f85
 #orig#wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 wizard.multi_folder_setup.no_name.text=\u8fd8\u6ca1\u6709\u4e3a {0} \u8f93\u5165\u540d\u79f0
 #orig#wizard.multi_folder_setup.no_name.title=No name
